# serializer version: 1
# name: test_cloud_all_sensors[binary_sensor.bedroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bedroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bedroom',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Bedroom',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_29_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Bedroom',
      'status': dict({
        'mode': 'off',
        'override': dict({
          'duration': 0,
          'setpoint': 23.5,
        }),
        'temperature': 21.5,
        'type': 'radiator',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.bedroom_socket-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bedroom_socket',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bedroom Socket',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Bedroom Socket',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_27_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.bedroom_socket-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Bedroom Socket',
      'status': dict({
        'mode': 'timer',
        'override': dict({
          'duration': 0,
          'setpoint': 'True',
        }),
        'type': 'on / off',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_socket',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.ensuite-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ensuite',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ensuite',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Ensuite',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_5_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.ensuite-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Ensuite',
      'status': dict({
        'mode': 'off',
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 28,
        }),
        'temperature': 21,
        'type': 'radiator',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ensuite',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.guest_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.guest_room',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Guest room',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Guest room',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_7_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.guest_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Guest room',
      'status': dict({
        'mode': 'off',
        'occupied': 'True',
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 21,
        'type': 'radiator',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.guest_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.hall-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hall',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hall',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Hall',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_2_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.hall-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Hall',
      'status': dict({
        'mode': 'off',
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 21,
        'type': 'radiator',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hall',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hot_water',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hot Water',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Hot Water',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_10_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Hot Water',
      'status': dict({
        'mode': 'override',
        'override': dict({
          'duration': 3600,
          'setpoint': 80,
        }),
        'temperature': 45.5,
        'type': 'hot water temperature',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.kitchen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kitchen',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Kitchen',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Kitchen',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_3_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Kitchen',
      'status': dict({
        'mode': 'off',
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 21.5,
        'type': 'radiator',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.kitchen_socket-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kitchen_socket',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Kitchen Socket',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Kitchen Socket',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_28_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.kitchen_socket-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Kitchen Socket',
      'status': dict({
        'mode': 'timer',
        'override': dict({
          'duration': 0,
          'setpoint': 'True',
        }),
        'type': 'on / off',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen_socket',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.lounge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.lounge',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lounge',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Lounge',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_1_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.lounge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Lounge',
      'status': dict({
        'mode': 'off',
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 20,
        'type': 'radiator',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.lounge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.single_channel_receiver_22-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.single_channel_receiver_22',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Single Channel Receiver 22',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Single Channel Receiver 22',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_22',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.single_channel_receiver_22-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'East Berlin',
      'friendly_name': 'Single Channel Receiver 22',
      'state': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.single_channel_receiver_22',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.study-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.study',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Study',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Study',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_30_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.study-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Study',
      'status': dict({
        'mode': 'off',
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 28,
        }),
        'temperature': 22,
        'type': 'radiator',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.study',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.study_socket-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.study_socket',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Study Socket',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.HEAT: 'heat'>,
    'original_icon': None,
    'original_name': 'Study Socket',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_32_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[binary_sensor.study_socket-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'heat',
      'friendly_name': 'Study Socket',
      'status': dict({
        'mode': 'off',
        'override': dict({
          'duration': 0,
          'setpoint': 'True',
        }),
        'type': 'on / off',
      }),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.study_socket',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
